add salary link main page

--- a/crud_app/pages/templates/index.html
+++ b/crud_app/pages/templates/index.html
@@ -10,6 +10,7 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
 <nav class="navbar navbar-light" style="background-color:#43a5dd;">
     <a href="{% url 'admin:index' %}" class = 'navbar-link btn-lg' style="background-color:#eceae5;color:#000000;">Admin</a>
     <a href="{% url 'index' %}" class = 'navbar-link btn-lg' style="background-color:#eceae5;color:#000000;">Main Page</a>
+    <a href="{% url 'calculate_salary' %}" class = 'navbar-link btn-lg' style="background-color:#eceae5;color:#000000;">List All Salaries</a>
     <a href="{% url 'employee_list' %}" class = 'navbar-link btn-lg' style="background-color:#eceae5;color:#000000;">List All Employees</a>
     <a href="{% url 'create_employee' %}" class="navbar-link btn-lg" style="background-color:#eceae5;color:#000000;">Add New Employees</a>
 </nav>
